--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,7 +69,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  min-width: 320px;
+  min-width: 100vw;
   min-height: 100vh;
 }
 
@@ -78,9 +78,9 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: var(--spacing-large);
   flex: 1;
 }
+
 
 .content {
   flex-grow: 1;
